demo creating 2 versions of the docker image, 1 with postgres, 1 without must set ilpaddress in integration tests now that it's been removed from application.yaml
Signed-off-by: nhartner <nhartner@gmail.com>